k8s/apps/flask-ml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-ml
  template:
    metadata:
      labels:
        app: flask-ml
    spec:
      containers:
      - name: flask-ml
        image: dans9881/flask-ml:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
