k8s/apps/flask-ml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-ml
spec:
  type: ClusterIP
  selector:
    app: flask-ml
  ports:
    - port: 80
      targetPort: 5000
